# tol_colors

./: .readthedocs.yml  LICENSE  MANIFEST.in  README.md  colorsets.json  pyproject.toml  setup.py  tol_colors.py
.github/workflows/: pypi-publish.yml  tests.yml
docs/source/: api.rst  build_images.py  build_viscm.py  colormaps.rst  colorsets.rst  conf.py  index.rst  overview.rst
docs/source/_static/: custom.css
docs/source/_templates/: footer-right.html
src/tol_colors/: __init__.py  __main__.py  changelog.md  colors.json
tests/: test_module.py
